# DL-workload-evaluation

./: .gitignore  README.md  setup.py
Core/: benchmark.py
Core/BenchmarkDatabase/: __init__.py  database.py  default_opset.py  elements.py  generator.py
Core/OnnxUtils/: extraction.py  run_summary.py  symbolic_shape_infer.py
Core/Runtimetools/: __init__.py  benchmark_diagnostics.py  cpu_diagnostics.py  gpu_diagnostics.py  runtime.py
OperatorBenchmarks/: CMakeLists.txt
OperatorBenchmarks/cmake/: FindCUBLAS.cmake  FindCUDNN.cmake  FindMklDNN.cmake
OperatorBenchmarks/intel/: CMakeLists.txt
OperatorBenchmarks/intel/convolution/: CMakeLists.txt  std_conv_bench.cpp
OperatorBenchmarks/nvidia/: CMakeLists.txt
OperatorBenchmarks/nvidia/convolution/: CMakeLists.txt  cudnn_convolution.cu
OperatorBenchmarks/nvidia/gemm/: CMakeLists.txt  cudnn_gemm.cu
OperatorBenchmarks/nvidia/helpers/: cudnn_helper.h  tensor.h
TrainingBenchmarks/: Resnet50_cifar10.py  Resnet50_imagenet.py  utils.py
